force-app/main/default/objects/Batch__c/fields/Batch_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Received_Date__c</fullName>
    <label>Batch Received Date</label>
    <type>Date</type>
</CustomField>