force-app/main/default/objects/Batch__c/fields/Date_Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Samples_Received__c</fullName>
    <label>Samples Received Date</label>
    <type>Date</type>
</CustomField>