force-app/main/default/objects/Batch__c/fields/Number_of_Samples_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Samples_Received__c</fullName>
    <label>Samples Received</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>