force-app/main/default/objects/Batch__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received</label>
    <type>Checkbox</type>
</CustomField>